Integration page profil - compatibilité sass

--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="author" content="www.frebsite.nl" />
 		<meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=yes" />
-    <!-- <link type="text/css" rel="stylesheet" href="profil.css" /> Si Sass ne fonctionne pas -->
+    <!-- <link type="text/css" rel="stylesheet" href="profil.css" />-->
 		<link type="text/css" rel="stylesheet" href="dist/css/main.css" />
 
 		<title>NetMadia - Votre profil</title>
