--- a/src/movies/views/movie.html
+++ b/src/movies/views/movie.html
@@ -7,7 +7,7 @@
 
     </div>
         
-    <div class="infoPoster">
+    <div class="infoTvMovie">
         <div class="posterContent">
             <img class="posterImg" ng-src="http://image.tmdb.org/t/p/w342{{movie.poster_path}}"/>
         </div>
@@ -23,24 +23,21 @@
             </div>
             <div class="castings">
                 <label class="castBy">Réalisé par :</label>
-                <span class="fontRegular" ng-repeat="(key, crew) in movie.credits.crew"  ng-if='crew.job=="Director"'>{{crew.name }}</span><br /><br /><br />
+                <span class="fontRegular" ng-repeat="(key, crew) in movie.credits.crew"  ng-if='crew.job=="Director"'>{{crew.name }} </span><br /><br /><br />
                 <label class="castBy">Avec :</label>
                 <div class="castByActor">
-                    <span class="fontRegular" ng-repeat="(key, role) in movie.credits.cast | limitTo: 4">{{role.name}}</span>
+                    <span class="fontRegular" ng-repeat="(key, role) in movie.credits.cast | limitTo: 4">{{role.name}}, </span>
                 </div>
+            </div>
+            <div class="userActionMovie clearfix">
+                <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
+                <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
             </div>
         </div>
     </div>
-    <div class="userActionMovie">
-        <div class="favoriteAdd fontRegular">
-        Ajouter aux favoris
-        </div>
-        <div class="reloadMovie fontRegular">
-        Reprendre la lecture
-        </div>
-    </div>
+
     
-    <div class="contentTvMovie">
+    <div class="contentTvMovie clearfix">
 
         <h3 class="synopsisFont fontRegular">Synopsis</h3>
         <p class="resumeTvMovie fontRegular">{{movie.overview}}</p>
