--- a/src/styles/colorFont.css
+++ b/src/styles/colorFont.css
@@ -8,6 +8,9 @@ body {
   font-size: 1em;
   color: #fff; }
 
+.scndColor {
+  color: #deb90c; }
+
 .castBy {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -37,14 +40,12 @@ h2 {
   font-size: 1.9em;
   color: #fff; }
 
-h4 {
+.seasonFont {
+  color: #deb90c;
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.9em; }
-
-.seasonFont {
-  color: #deb90c; }
 
 .seasonNumberFont {
   font-size: 1.3em; }
