--- a/src/styles/colorFont.scss
+++ b/src/styles/colorFont.scss
@@ -3,6 +3,7 @@
 $backgroundColor: #17181b;
 $primaryColor: #fff;
 $secondaryColor: #deb90c;
+$hoverColorSeason: #2d2d2d;
 
 
 body {
@@ -14,6 +15,10 @@ body {
     font-weight: 400;
     font-size: 1em;
     color: $primaryColor;
+}
+
+.scndColor {
+    color: $secondaryColor;
 }
 
 .castBy {
@@ -50,15 +55,12 @@ h2 {
     color: $primaryColor;
 }
 
-h4 {
+.seasonFont {
+    color: $secondaryColor;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     text-transform: uppercase;
     font-size:1.9em;
-}
-
-.seasonFont {
-    color: $secondaryColor;
 }
 
 .seasonNumberFont {
