--- a/src/styles/positions.scss
+++ b/src/styles/positions.scss
@@ -8,7 +8,7 @@
 
 .headerContent {
     position: relative;
-    height: 433px;
+    height: 440px;
     overflow:  hidden;
 }
 
@@ -30,19 +30,19 @@
     top: 10;
     left: 0;
     width: 100%;
-    z-index: 1;
 }
 
-.infoPoster {
+.infoTvMovie {
     position:relative;
     width:auto;
+    z-index: 3;
 }
 .posterContent {
     position: relative;
+    float: left;
     margin-top: -245px;
-    margin-left: 92px;
-    z-index: 2;
     max-width: 265px;
+    padding-left: 1.8796992481203%;
 }
 
 .posterImg {
@@ -50,45 +50,38 @@
 }
 
 .contentTvMovieInfo {
-    position:absolute;
-    top: 0;
-    left: 400px;
-    z-index: 2;
-    width:auto;
+    position:relative;
+    float: left;
+    width: 60%;
+    margin-top: -225px;
+    padding-left :  3.267973856209%;
+
 }
 
 .titleTvMovie {
     position: relative;
-    margin: 20px;
-    margin-left:0px;
-    z-index: 2;
+    margin: 0 0 20px 0;
 }
 
 .detailTvMovie {
     position: relative;
-    margin: 20px;
-    margin-left:0px;
-    z-index: 2;
+    padding: 20px 0 20px 0;
 }
 
 .detailTvMovie  li {
     display: inline;
     float:left;
-    margin-top: 20px;
-    margin-bottom: 40px;
 }
 
 .popularityStar {
     position: relative;
     text-align: left;
-    width:50px;
-    margin-top: 50px;
-    margin-bottom: 25px;
+    padding : 20px 0 40px 0;
 }
 
 .castings {
     position : relative;
-    margin-top: 80px;
+    padding: 40px 0 20px 0;
 }
 
 .castBy {
@@ -108,11 +101,9 @@
 }
 
 .userActionMovie {
-    position:absolute;
-    top: 590px  ;
-    left:400px;
-    z-index: 2;
+    position:relative;
     width:auto;
+    padding: 40px 0 20px 0;
 }
 
 .favoriteAdd {
@@ -125,43 +116,46 @@
 }
 
 .contentTvMovie {
-    width: 100%;
+    width: 90%;
     position: relative;
-    padding-left: 95px;
-    padding-right:95px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .synopsisFont {
-    margin-top: 25px;
+    padding-top: 35px;
     margin-bottom: 25px;
 }
 
 .resumeTvMovie {
-    margin-bottom:20px;
+    margin:50px 0 50px 0;
 }
 
 .seasonFont {
-    margin-top:5px;
+    margin-top: 10px;
     margin-left: 20px;
     width:auto;
     display:inline;
 }
 
-.seasonNumberFont{
+.seasonNumber{
     position:relative;
-    height:35px;
-    line-height:35px;
     text-align:center;
     background-color: $primaryColor;
-    margin: 10px 10px;
-    background:none;
     border:none;
-    padding-bottom:20px !important;
-    width:20px;
+    background: transparent;
+    border: none !important;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    padding:0 3px 0 3px;
+
 }
 
-.seasonNumberFont:hover{
-    background-color: #2d2d2d;
+.seasonNumber:hover {
+    background-color: $hoverColorSeason;
 }
+
 
 .separatorSeason {
     margin: 0;
@@ -170,5 +164,11 @@
     color: $secondaryColor;
     border-color: $secondaryColor;
     height:2,5px;
+    width: 100%;        
+}
 
+
+
+.clearfix {
+    clear: both;
 }
