Page profil - compatible sass + amelioration structure

--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -35,11 +35,11 @@
 
 			<section class="content">
 
-
-				<h1 class="title-details">Films</h1>
-				<a href="#"><h1 class="tab-top-flop">Séries <img src="images/arrow-right.svg" width="15px"></h1></a>
-
-				<hr class="subtitle"></hr>
+					<div class="category-switch">
+							<h1 class="title-details">Films</h1>
+							<a href="#"><h1 class="tab-top-flop">Séries <img src="images/arrow-right.svg" width="15px"></h1></a>
+							<hr class="subtitle"></hr>
+					</class>
 
 				<div class="top">
 
