Une bonne nav barre a droite

--- a/src/movies/views/movie.html
+++ b/src/movies/views/movie.html
@@ -1,21 +1,28 @@
-
+<div class="contentBigTvMovie">
+    
     <div class="panel-heading">
+        
         <div class="cbp-spmenu-push">
-            <!-- Début menu à gauche qui slide -->
+
             <nav class="cbp-spmenu cbp-spmenu-vertical" id="cbp-spmenu-s1" >
+                
                 <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
+                
                 <div class="menu-navigation">
+                    
                     <a class="selected" href="#/films" style="color:#000">FILMS</a>
                     <a class="" href="#/series">SÉRIES</a>
+
                 </div>
+                
                 <div class="filters filters-menu-left">
                     <label class="genre">Genre : </label>
                     <select class="form-control" 
                             ng-change="genre(value)"
                             ng-model="value"
                             ng-options="genre.id as genre.name for genre in listGenre.genres"
-                        >
-                        <option value="">Tous</option>
+                    >
+                    <option value="">Tous</option>
                     </select><br/><br/><br/><br/>
                     <label class="genre">Trier par : </label>
                     <select
@@ -26,230 +33,82 @@
                         <option value="">Tous</option>
                     </select>
                 </div>
+
                 <br/><br/><br/>
+
                 <div class="search">
                     <input  class="btn" style="width:92%"
                         ng-change="search(searchValue)"
                         ng-model="searchValue" type="search">
                 </div>
+
                 <br/><br/><br/><br/>
+                
                 <div class="user">
                     <img class="user-img" src="images/placeholder.png"/>
                     <div class="user-name">User Name</div>
                 </div>
+            
             </nav>
-            <!-- Fin menu à gauche qui slide -->
-            <!-- <div class="container">
-                <div class="main">
-                    <section>
-                        <header class="container page-header">
-                            <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
-                            <div class="menu-navigation">
-                                <a class="" href="">DÉCOUVRIR</a>
-                                <a class="selected" href="#/films">FILMS</a>
-                                <a class="" href="#/series">SÉRIES</a>
-                            </div>
-                            <img id="showLeft" src="images/burger-menu.png"/ class="burger-menu"/>
-                            <nav class="left-menu">
-                            </nav>
-                            <form style="width:370px" class="filters-search-user">
-                                <div class="filters-search-user">
-                                    <div class="filters">
-                                        <label class="genre">Genre : </label>
-                                        <select class="form-control" style="width:106px"
-                                                ng-change="genre(value)"
-                                                ng-model="value"
-                                                ng-options="genre.id as genre.name for genre in listGenre.genres"
-                                            >
-                                            <option value="">Tous</option>
-                                        </select>
-                                        <label class="genre">Trier par : </label>
-                                        <select
-                                                ng-change="category(value,1)" style="width:120px"
-                                                ng-model="value"
-                                                ng-options="key as value for (key, value) in categories"
-                                            >
-                                            <option value="">Tous</option>
-                                        </select>
-                                    </div>
-                                    <div class="search">
-                                    <input  class="btn" style="width:100%"
-                                            ng-change="search(searchValue)"
-                                            ng-model="searchValue" type="search">
-                                    </div>
-                                    <div class="user">
-                                        <img class="user-img" src="images/placeholder.png"/>
-                                        <div class="user-name">User Name</div>
-                                    </div>
-                                </div>
-                            </form> 
-                        </header> 
-                    </section>
-                </div>
-            </div> -->
+
         </div>
+
     </div> 
-        <!-- <div class="panel-heading">
-        <div class="cbp-spmenu-push">
-            <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
-                <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
-                <div class="search">
-                    <input  class="btn" style="width:92%"
-                        ng-change="search(searchValue)"
-                        ng-model="searchValue" type="search">
-                </div>
-                <br/><br/><br/><br/>
-                <div class="user">
-                    <img class="user-img" src="images/placeholder.png"/>
-                    <div class="user-name">User Name</div>
-                </div>
-            </nav>
-        <div class="container">
-            <div class="main">
-                <section>
-                    <header class="container page-header">
-                        <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
-                        <div class="menu-navigation">
-                            <a class="" href="">DÉCOUVRIR</a>
-                            <a class="selected" href="#/films">FILMS</a>
-                            <a class="" href="#/series">SÉRIES</a>
-                        </div>
-                        <img id="showLeft" src="images/burger-menu.png"/ class="burger-menu"/>
-                        <nav class="left-menu">
-                        </nav>
-                        <form style="width:370px" class="filters-search-user">
-                            <div class="filters-search-user">
-                                <div class="filters">
-                                    <label class="genre">Genre : </label>
-                                    <select class="form-control" style="width:106px"
-                                            ng-change="genre(value)"
-                                            ng-model="value"
-                                            ng-options="genre.id as genre.name for genre in listGenre.genres"
-                                        >
-                                        <option value="">Tous</option>
-                                    </select>
-                                    <label class="genre">Trier par : </label>
-                                    <select
-                                            ng-change="category(value,1)" style="width:120px"
-                                            ng-model="value"
-                                            ng-options="key as value for (key, value) in categories"
-                                        >
-                                        <option value="">Tous</option>
-                                    </select>
-                                </div>
-                                <div class="search">
-                                <input  class="btn" style="width:100%"
-                                        ng-change="search(searchValue)"
-                                        ng-model="searchValue" type="search">
-                                </div>
-                                <div class="user">
-                                    <img class="user-img" src="images/placeholder.png"/>
-                                    <div class="user-name">User Name</div>
-                                </div>
-                            </div>
-                        </form> 
-                    </header> 
-                </section>
-            </div>
-        </div>
-    </div> -->
-    <div style="margin-left:235px">
-     <div class="headerContent">
-        <div class="gradient">
-        </div>
-        <div class="backdropImg" style="background-image:url(http://image.tmdb.org/t/p/w1280{{movie.backdrop_path}})">
-
-        </div>
-    </div>
-
-    <!-- </div> -->
-
         
-    <div class="infoTvMovie">
-        <div class="posterContent">
-            <img class="posterImg" ng-src="http://image.tmdb.org/t/p/w342{{movie.poster_path}}"/>
-        </div>
-        <div class="contentTvMovieInfo">
-            <h2 class="titleTvMovie">{{movie.title}}</h2>
-            <ul class="detailTvMovie regularFont">
-                <li>{{movie.release_date}}</li>
-                <li ng-repeat="(key, genre) in movie.genres | limitTo:1">{{genre.name}}</li>
-                <li>{{movie.runtime}}</li>
-            </ul>
-            <br />
-            <div class="popularityStar regularFont">{{movie.popularity}}
+    <div class="mainContentPageTvMovie">
+         
+         <div class="headerContent">
+            
+            <div class="gradient"></div>
+            
+            <div class="backdropImg" style="background-image:url(http://image.tmdb.org/t/p/w1280{{movie.backdrop_path}})">
+
             </div>
-            <div class="castings">
-                <label class="castBy">Réalisé par :</label>
-                <span class="fontRegular" ng-repeat="(key, crew) in movie.credits.crew"  ng-if='crew.job=="Director"'>{{crew.name }} </span><br /><br /><br />
-                <label class="castBy">Avec :</label>
-                <div class="castByActor">
-                    <span class="fontRegular" ng-repeat="(key, role) in movie.credits.cast | limitTo: 4">{{role.name}}, </span>
+
+        </div>
+
+        <div class="infoTvMovie">
+
+            <div class="posterContent">
+                <img class="posterImg" ng-src="http://image.tmdb.org/t/p/w342{{movie.poster_path}}"/>
+            </div>
+
+            <div class="contentTvMovieInfo">
+                
+                <h2 class="titleTvMovie">{{movie.title}}</h2>
+
+                <ul class="detailTvMovie regularFont">
+
+                    <li>{{movie.release_date}}</li>
+                    <li ng-repeat="(key, genre) in movie.genres | limitTo:1">{{genre.name}}</li>
+                    <li>{{movie.runtime}}</li>
+
+                </ul>
+
+                <br />
+                
+                <div class="popularityStar regularFont">{{movie.popularity}}
                 </div>
-            </div>
-            <div class="userActionMovie clearfix">
-                <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
-                <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
-            </div>
-        </div>
-        <!-- <div class="clearfix" style="color:white;">
-            nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh nrbfzfb hfbze fbhzjbffh 
-        </div> -->
-    </div>
-
-    
-    <!-- <div class="contentTvMovie clearfix">
-
-        <h3 class="synopsisFont fontRegular">Synopsis</h3>
-         <span style="color:white">{{movie.overview}}</span> 
-        hv
-
-
-    </div> -->
-        <!-- 
-    <div class="infoPoster">
-        <div class="posterContent">
-            <img class="posterImg" ng-src="http://image.tmdb.org/t/p/w342{{movie.poster_path}}"/>
-        </div>
-        <div class="contentTvMovieInfo">
-            <h2 class="titleTvMovie">{{movie.title}}</h2>
-            <ul class="detailTvMovie regularFont">
-                <li>{{movie.release_date}}</li>
-                <li ng-repeat="(key, genre) in movie.genres | limitTo:1">{{genre.name}}</li>
-                <li>{{movie.runtime}}</li>
-            </ul>
-            <br />
-            <div class="popularityStar regularFont">{{movie.popularity}}
-            </div>
-            <div class="castings">
-                <label class="castBy">Réalisé par :</label>
-                <span class="fontRegular" ng-repeat="(key, crew) in movie.credits.crew"  ng-if='crew.job=="Director"'>{{crew.name }}</span><br /><br /><br />
-                <label class="castBy">Avec :</label>
-                <div class="castByActor">
-                    <span class="fontRegular" ng-repeat="(key, role) in movie.credits.cast | limitTo: 4">{{role.name}}</span>
+                <div class="castings">
+                    <label class="castBy">Réalisé par :</label>
+                    <span class="fontRegular" ng-repeat="(key, crew) in movie.credits.crew"  ng-if='crew.job=="Director"'>{{crew.name }} </span><br /><br /><br />
+                    <label class="castBy">Avec :</label>
+                    <div class="castByActor">
+                        <span class="fontRegular" ng-repeat="(key, role) in movie.credits.cast | limitTo: 4">{{role.name}}, </span>
+                    </div>
                 </div>
+                <div class="userActionMovie clearfix">
+                    <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
+                    <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
+                </div>
+
             </div>
-        </div>
-    </div>
-    <div class="userActionMovie">
-        <div class="favoriteAdd fontRegular">
-        Ajouter aux favoris
-        </div>
-        <div class="reloadMovie fontRegular">
-        Reprendre la lecture
-        </div>
-    </div>
-    
-    <div class="contentTvMovie">
 
-        <h3 class="synopsisFont fontRegular">Synopsis</h3>
-        <p class="resumeTvMovie fontRegular">{{movie.overview}}</p>
+        </div>
 
-    </div> -->
+    </div>
 
 </div>
-
-   
 
 
   <!--   <div class="panel panel-primary">
