--- a/src/movies/views/serie.html
+++ b/src/movies/views/serie.html
@@ -1,139 +1,138 @@
-    <div class="headerContent">
-        <div class="panel-heading">
+<div class="contentBigTvMovie container page-header">
+
+    <div class="panel-heading">
+
         <div class="cbp-spmenu-push">
-            <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
+        
+            <nav class="cbp-spmenu cbp-spmenu-vertical" id="cbp-spmenu-s1" >
+                
+                <img id="showLeft" src="images/burger-menu.png"/ class="burger-menu"/>
+
                 <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
+
+                <div class="menu-navigation">
+
+                    <a class="selected" href="#/films" style="color:#000">FILMS</a>
+                    <a class="" href="#/series">SÉRIES</a>
+
+                </div>
+
+                <div class="filters filters-menu-left">
+                    <label class="genre">Genre : </label>
+                    <select class="form-control" 
+                            ng-change="genre(value)"
+                            ng-model="value"
+                            ng-options="genre.id as genre.name for genre in listGenre.genres"
+                    >
+                    <option value="">Tous</option>
+                    </select><br/><br/><br/><br/>
+                    <label class="genre">Trier par : </label>
+                    <select
+                            ng-change="category(value,1)" 
+                            ng-model="value"
+                            ng-options="key as value for (key, value) in categories"
+                        >
+                        <option value="">Tous</option>
+                    </select>
+                </div>
+
                 <br/><br/><br/>
+
                 <div class="search">
                     <input  class="btn" style="width:92%"
                         ng-change="search(searchValue)"
                         ng-model="searchValue" type="search">
                 </div>
+
                 <br/><br/><br/><br/>
+
                 <div class="user">
                     <img class="user-img" src="images/placeholder.png"/>
                     <div class="user-name">User Name</div>
                 </div>
-            </nav>
-        <div class="container">
-            <div class="main">
-                <section>
-                    <header class="container page-header">
-                        <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
-                        <div class="menu-navigation">
-                            <a class="" href="">DÉCOUVRIR</a>
-                            <a href="#/films">FILMS</a>
-                            <a class="selected" href="#/series">SÉRIES</a>
-                        </div>
-                        <img id="showLeft" src="images/burger-menu.png"/ class="burger-menu"/>
-                        <nav class="left-menu">
-                        </nav>
-                        <form style="width:370px" class="filters-search-user">
-                            <div class="filters-search-user">
-                                <div class="filters">
-                                    <label class="genre">Trier par : </label>
-                                    <select
-                                            ng-change="category(value,1)" style="width:120px"
-                                            ng-model="value"
-                                            ng-options="key as value for (key, value) in categories"
-                                        >
-                                        <option value="">Tous</option>
-                                    </select>
-                                </div>
-                                <div class="search">
-                                <input  class="btn" style="width:100%"
-                                        ng-change="search(searchValue)"
-                                        ng-model="searchValue" type="search">
-                                </div>
-                                <div class="user">
-                                    <img class="user-img" src="images/placeholder.png"/>
-                                    <div class="user-name">User Name</div>
-                                </div>
-                            </div>
-                        </form> 
-                    </header> 
-                </section>
-            </div>
-        </div>
-    </div>
-   
-    </div> 
-        <div class="gradient">
-        </div>
-        <div class="backdropImg" style="background-image:url(http://image.tmdb.org/t/p/w1280{{serie.backdrop_path}})">
+            
+            </nav>                        
+                        
 
-        </div>
+
+
 
     </div>
-        
+
+</div> 
+
+<div class="mainContentPageTvMovie">
+
+    <div class="headerContent">
+
+        <div class="gradient"></div>
+    
+        <div class="backdropImg" style="background-image:url(http://image.tmdb.org/t/p/w1280{{serie.backdrop_path}})"></div>     
+
+    </div>
 
     <div class="infoTvMovie">
 
-    <div class="infoPoster">
+        <div class="infoPoster">
 
-        <div class="posterContent">
-            <img class="posterImg" ng-src="http://image.tmdb.org/t/p/w342{{serie.poster_path}}"/>
-        </div>
-        <div class="contentTvMovieInfo">
-            <h2 class="titleTvMovie">{{serie.name}}</h2>
-            <ul class="detailTvMovie regularFont">
-                <li>{{serie.first_air_date}} </li>
-                <li ng-repeat="(key, genre) in serie.genres | limitTo:1">   {{genre.name}} </li>
-                <li>{{serie.runtime}} </li>
-            </ul>
-            <br />
-            <div class="popularityStar regularFont">{{serie.popularity}}
+            <div class="posterContent">
+
+                <img class="posterImg" ng-src="http://image.tmdb.org/t/p/w342{{serie.poster_path}}"/>
+
             </div>
-            <div class="castings">
-                <label class="castBy">Réalisé par :</label>
-                <span class="fontRegular" ng-repeat="real in serie.created_by" >{{real.name}}, </span><br /><br /><br />
-                <label class="castBy">Avec :</label>
-                <div class="castByActor">
-                    <span class="fontRegular" ng-repeat="(key, role) in serie.credits.cast | limitTo: 4">{{role.name}}, </span>
+            
+            <div class="contentTvMovieInfo">
+                
+                <h2 class="titleTvMovie">{{serie.name}}</h2>
+                <ul class="detailTvMovie regularFont">
+                    <li>{{serie.first_air_date}} </li>
+                    <li ng-repeat="(key, genre) in serie.genres | limitTo:1">   {{genre.name}} </li>
+                    <li>{{serie.runtime}} </li>
+                </ul>
+                <br />
+                <div class="popularityStar regularFont">{{serie.popularity}}
                 </div>
+                <div class="castings">
+                    <label class="castBy">Réalisé par :</label>
+                    <span class="fontRegular" ng-repeat="real in serie.created_by" >{{real.name}}, </span><br /><br /><br />
+                    <label class="castBy">Avec :</label>
+                    <div class="castByActor">
+                        <span class="fontRegular" ng-repeat="(key, role) in serie.credits.cast | limitTo: 4">{{role.name}}, </span>
+                    </div>
+                </div>
+
+                <div class="userActionMovie clearfix">
+                    <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
+                    <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
+                </div>
+
             </div>
 
-            <div class="userActionMovie clearfix">
-                <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
-                <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
-            </div>
         </div>
-    </div>
     
-    <div class="contentTvMovie clearfix">
+        <div class="contentTvMovie clearfix">
 
-        <h3 class="synopsisFont fontRegular">Synopsis</h3>
-        <p class="resumeTvMovie fontRegular">{{serie.overview}}</p>
-        <hr class="separatorSeason"></hr>
-        <span class="seasonFont">Saison</span>
+            <h3 class="synopsisFont fontRegular">Synopsis</h3>
+            <p class="resumeTvMovie fontRegular">{{serie.overview}}</p>
 
         </div>
-    </div>
-    <div class="userActionMovie">
-        <div class="favoriteAdd fontRegular">
-        Ajouter aux favoris
-        </div>
-        <div class="reloadMovie fontRegular">
-        Reprendre la lecture
-        </div>
+
     </div>
     
     <div class="contentTvMovie">
-
-        <h3 class="synopsisFont fontRegular">Synopsis</h3>
+        
         <p class="resumeTvMovie fontRegular">{{movie.overview}}</p>
-        <hr class="separatorSeason"></hr>
+        <hr class="separatorSeason"/>
         <h4 class="seasonFont">Saison</h4>
 
         <button ng-repeat="(key, season) in serie.seasons"  ng-click="showSeason(serie_id,season.season_number)"  class="seasonNumberFont regularFont">{{season.season_number}}</button>
-        <hr class="separatorSeason"></hr>
-    
+        <hr class="separatorSeason"/>
+
     </div>
+       
 
-   
-
-    <div class="panel panel-primary">
-        <div class="panel-heading">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
             <h3 class="panel-title panel-title title--inline"> Serie : {{serie.name}}</h3>
         </div>
 
