--- a/src/styles/positions.css
+++ b/src/styles/positions.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$primaryColor".
-        on line 154 of ./positions.scss
+        on line 164 of ./src/styles/positions.scss
 
-149: .seasonNumberFont{
-150:     position:relative;
-151:     height:35px;
-152:     line-height:35px;
-153:     text-align:center;
-154:     background-color: $primaryColor;
-155:     margin: 10px 10px;
-156:     background:none;
-157:     border:none;
-158:     padding-bottom:20px !important;
-159:     width:20px;
+159: .seasonNumberFont{
+160:     position:relative;
+161:     height:35px;
+162:     line-height:35px;
+163:     text-align:center;
+164:     background-color: $primaryColor;
+165:     margin: 10px 10px;
+166:     background:none;
+167:     border:none;
+168:     padding-bottom:20px !important;
+169:     width:20px;
 
 Backtrace:
-./positions.scss:154
+./src/styles/positions.scss:164
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.14/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.14/lib/sass/script/tree/node.rb:50:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.14/lib/sass/tree/visitors/perform.rb:394:in `visit_prop'
@@ -67,4 +67,4 @@ Backtrace:
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$primaryColor\".\A         on line 154 of ./positions.scss\A \A 149: .seasonNumberFont{\A 150:     position:relative;\A 151:     height:35px;\A 152:     line-height:35px;\A 153:     text-align:center;\A 154:     background-color: $primaryColor;\A 155:     margin: 10px 10px;\A 156:     background:none;\A 157:     border:none;\A 158:     padding-bottom:20px !important;\A 159:     width:20px;"; }
+  content: "Error: Undefined variable: \"$primaryColor\".\A         on line 164 of ./src/styles/positions.scss\A \A 159: .seasonNumberFont{\A 160:     position:relative;\A 161:     height:35px;\A 162:     line-height:35px;\A 163:     text-align:center;\A 164:     background-color: $primaryColor;\A 165:     margin: 10px 10px;\A 166:     background:none;\A 167:     border:none;\A 168:     padding-bottom:20px !important;\A 169:     width:20px;"; }
