--- a/src/styles/positions.scss
+++ b/src/styles/positions.scss
@@ -1,4 +1,15 @@
-
+.contentBigTvMovie {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+.mainContentPageTvMovie {
+    position:relative;
+    top: 0;
+    left: 235px;
+    right:0;
+    width: 100%;
+}
 
 .container {
     width: 100%;
@@ -52,7 +63,6 @@
 .contentTvMovieInfo {
     position:absolute;
     top: 0;
-    left: 400px;
     z-index: 2;
     width:auto;
 }
@@ -61,7 +71,7 @@
     position: relative;
     margin: 20px;
     margin-left:0px;
-    z-index: 2;
+    z-index: 3;
 }
 
 .detailTvMovie {
@@ -172,3 +182,36 @@
     height:2,5px;
 
 }
+
+.logo-accueil{
+    width:185px;
+    margin:20px;
+}
+
+.page-header{
+    border-bottom:8px solid $secondaryColor;
+    padding-bottom:24px;
+    min-height:80px;
+}
+
+
+.menu-navigation > a {
+    color:$primaryColor;
+    padding:14px;
+    padding-bottom:31px;
+    padding-top:35px;
+    text-decoration:none;
+    font-size:0.8em;
+}
+
+
+a.selected{
+    background-color:$secondaryColor;
+    color:#000;
+}
+
+#cbp-spmenu-s1{
+    width:235px;
+}
+
+
