--- a/src/movies/views/login.html
+++ b/src/movies/views/login.html
@@ -114,18 +114,18 @@
           <div class="sminputs">
             <div class="input full">
               <label class="string optional" for="user-name">Email*</label>
-              <input class="string optional" maxlength="255" id="user-email" placeholder="Email" type="email" size="50" />
+              <input class="string optional" maxlength="255" id="user-email" placeholder="Email" type="email" size="50" ng-model="user.emaillg" />
             </div>
           </div>
           <div class="sminputs">
             <div class="input full">
-              <label class="string optional" for="user-pw">Password *</label>
-              <input class="string optional" maxlength="255" id="user-pw" placeholder="Password" type="password" size="50" />
+              <label class="string optional" for="user-pw"  >Password *</label>
+              <input class="string optional" maxlength="255" id="user-pw" placeholder="Password" type="password" size="50" ng-model="user.passwordlg"/>
                           <span class="hide-password">Show</span>
             </div>
           </div>
           <div class="simform__actions">
-            <input class="sumbit" name="commit" type="sumbit" value="Log In" />
+            <input class="sumbit" name="commit" type="sumbit" value="Log In" ng-click="login(user)" />
             <span class="simform__actions-sidetext"><a class="special" role="link" href="#">Forgot your password?<br>Click here</a></span>
           </div>
         </form>
